k8s/kraft/funk.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: funk
---
apiVersion: v1
kind: Service
metadata:
  name: funk
  namespace: funk
spec:
  selector:
    app: funk
  ports:
    - name: minecraft
      port: 25565
      targetPort: 25565
      nodePort: 30566
  type: NodePort
  # type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: funk
  namespace: funk
spec:
  replicas: 0
  selector:
    matchLabels:
      app: funk
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: funk
      annotations:
        diun.enable: "true"
    spec:
      # nodeSelector:
      #   funk: "true"
      containers:
        - name: funk
          image: itzg/minecraft-server
          ports:
            - containerPort: 25565
              protocol: TCP
            - containerPort: 25575
              protocol: TCP
              name: rcon
          lifecycle:
            preStop:
              exec:
                command:
                  [
                    "/bin/sh",
                    "-c",
                    "mc-send-to-console save-all && mc-send-to-console say Server is shutting down in 10 seconds && sleep 10 && mc-send-to-console save-all && mc-send-to-console stop",
                  ]
          startupProbe:
            tcpSocket:
              port: 25565
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: 25565
            periodSeconds: 10
            initialDelaySeconds: 15
          livenessProbe:
            tcpSocket:
              port: 25565
            periodSeconds: 20
            initialDelaySeconds: 30
          resources:
            requests:
              memory: "3Gi"
              cpu: "1"
            limits:
              memory: "4Gi"
              cpu: "3"
          stdin: true
          tty: true
          volumeMounts:
            - name: minecraft-data
              mountPath: /data
      restartPolicy: Always
      volumes:
        - name: minecraft-data
          persistentVolumeClaim:
            # claimName: funk-data-backup
            claimName: funk-season2-data
