k8s/kraft/magnet-smp.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: magnet-smp
---
apiVersion: v1
kind: Service
metadata:
  name: magnet-smp
  namespace: magnet-smp
spec:
  selector:
    app: magnet-smp
  ports:
    - name: minecraft
      port: 25565
      targetPort: 25565
      protocol: TCP
    - name: rcon
      port: 25575
      targetPort: 25575
      protocol: TCP
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magnet-smp
  namespace: magnet-smp
spec:
  replicas: 0
  selector:
    matchLabels:
      app: magnet-smp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: magnet-smp
      annotations:
        diun.enable: "true"
    spec:
      # nodeSelector:
      #   magnet-smp: "true"
      containers:
        - name: magnet-smp
          image: itzg/minecraft-server
          ports:
            - containerPort: 25565
              protocol: TCP
              name: minecraft
            - containerPort: 25575
              protocol: TCP
              name: rcon
          lifecycle:
            preStop:
              exec:
                command:
                  [
                    "/bin/sh",
                    "-c",
                    "mc-send-to-console save-all && mc-send-to-console say Server is shutting down in 10 seconds && sleep 10 && mc-send-to-console save-all && mc-send-to-console stop",
                  ]
          startupProbe:
            tcpSocket:
              port: 25565
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: 25565
            periodSeconds: 10
            initialDelaySeconds: 15
          livenessProbe:
            tcpSocket:
              port: 25565
            periodSeconds: 20
            initialDelaySeconds: 30
          resources:
            requests:
              memory: "3Gi"
              cpu: "1"
            limits:
              memory: "4Gi"
              cpu: "3"
          stdin: true
          tty: true
          volumeMounts:
            - name: minecraft-data
              mountPath: /data
        - name: playit-agent
          image: ghcr.io/playit-cloud/playit-agent:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"

      restartPolicy: Always
      volumes:
        - name: minecraft-data
          persistentVolumeClaim:
            claimName: magnet-smp-season2-data
