k8s/kraft/kraft.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kraft
---
apiVersion: v1
kind: Service
metadata:
  name: kraft
  namespace: kraft
spec:
  selector:
    app: kraft
  ports:
    - name: minecraft
      port: 25565
      targetPort: 25565
      protocol: TCP
    - name: bedrock
      port: 19132
      targetPort: 19132
      protocol: UDP
    - name: bluemap
      port: 8100
      targetPort: 8100
      protocol: TCP
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kraft-map
  namespace: kraft
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: kraft-map.wayl.one
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kraft
                port:
                  number: 8100
  tls:
    - hosts:
        - kraft-map.wayl.one
      secretName: kraft-map-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kraft
  namespace: kraft
spec:
  replicas: 0
  selector:
    matchLabels:
      app: kraft
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: kraft
      annotations:
        diun.enable: "true"
    spec:
      # nodeSelector:
      #   kraft: "true"
      containers:
        - name: kraft
          image: itzg/minecraft-server
          ports:
            - containerPort: 25565
              protocol: TCP
              name: minecraft
            - containerPort: 19132
              protocol: UDP
              name: bedrock
            - containerPort: 8100
              protocol: TCP
              name: bluemap
            - containerPort: 25575
              protocol: TCP
              name: rcon
          lifecycle:
            preStop:
              exec:
                command:
                  [
                    "/bin/sh",
                    "-c",
                    "mc-send-to-console save-all && mc-send-to-console say Server is shutting down in 10 seconds && sleep 10 && mc-send-to-console save-all && mc-send-to-console stop",
                  ]
          startupProbe:
            tcpSocket:
              port: 25565
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30
          readinessProbe:
            tcpSocket:
              port: 25565
            periodSeconds: 10
            initialDelaySeconds: 15
          livenessProbe:
            tcpSocket:
              port: 25565
            periodSeconds: 20
            initialDelaySeconds: 30
          resources:
            requests:
              memory: "3Gi"
              cpu: "1"
            limits:
              memory: "4Gi"
              cpu: "3"
          stdin: true
          tty: true
          volumeMounts:
            - name: minecraft-data
              mountPath: /data
            - name: geyser-config
              mountPath: /config
              readOnly: true
        - name: playit-agent
          image: ghcr.io/playit-cloud/playit-agent:latest
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      restartPolicy: Always
      volumes:
        - name: minecraft-data
          persistentVolumeClaim:
            claimName: kraft-season3-data
        - name: geyser-config
          configMap:
            name: kraft-geyser-config
        - name: bluemap-config
          configMap:
            name: kraft-bluemap-config
